Refactor UpdateChecker to use modern HttpClient API
Replaced outdated HttpURLConnection with Java's HttpClient for asynchronous update checks, improving readability and code maintainability. Enhanced thread safety in singleton initialization and data access. Adjusted response parsing and error handling for robustness and clarity.