@@ -1,20 +1,21 @@
 package net.licks92.wirelessredstone;
 
-import com.github.zafarkhaja.semver.Version;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import com.google.gson.JsonSyntaxException;
 import org.bukkit.plugin.java.JavaPlugin;
+import org.jetbrains.annotations.NotNull;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class UpdateChecker {
@@ -22,120 +23,157 @@ public class UpdateChecker {
     private static final String USER_AGENT = "WirelessRedstone-update-checker";
     private static final String UPDATE_URL = "https://wirelessredstonegroup.github.io/WirelessRedstoneUpdate/update2.json";
 
-    private static UpdateChecker instance;
-
-    private UpdateResult lastResult = null;
-
+    private static volatile UpdateChecker instance; // Ensures thread-safety for singleton
     private final JavaPlugin plugin;
+    private volatile UpdateResult lastResult; // Thread-safe storage
+    private final HttpClient httpClient; // Modern HTTP client for async requests
 
+    // Constructor
     private UpdateChecker(JavaPlugin plugin) {
         this.plugin = plugin;
+        this.httpClient = HttpClient.newBuilder()
+                .followRedirects(HttpClient.Redirect.NORMAL)
+                .build();
     }
 
+    /**
+     * Initializes the UpdateChecker for the given plugin.
+     */
     public static UpdateChecker init(JavaPlugin plugin) {
         Objects.requireNonNull(plugin, "Plugin object cannot be NULL");
-
-        return instance != null ? instance : (instance = new UpdateChecker(plugin));
+        if (instance == null) { // Double-checked locking for thread safety
+            synchronized (UpdateChecker.class) {
+                if (instance == null) {
+                    instance = new UpdateChecker(plugin);
+                }
+            }
+        }
+        return instance;
     }
 
+    /**
+     * Returns the current instance of UpdateChecker.
+     *
+     * @throws IllegalStateException if not initialized
+     */
+    public static UpdateChecker getInstance() {
+        if (instance == null) {
+            throw new IllegalStateException("UpdateChecker is not initialized!");
+        }
+        return instance;
+    }
+
+    /**
+     * Performs an asynchronous update check.
+     *
+     * @return a CompletableFuture that completes with the update result.
+     */
     public CompletableFuture<UpdateResult> requestUpdateCheck() {
         return CompletableFuture.supplyAsync(() -> {
             try {
-                URL url = new URL(UPDATE_URL);
-                HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-                connection.setConnectTimeout(10000);
-                connection.setReadTimeout(10000);
-                connection.addRequestProperty("User-Agent", USER_AGENT);
+                // Create HTTP request
+                HttpRequest request = HttpRequest.newBuilder()
+                        .uri(URI.create(UPDATE_URL))
+                        .header("User-Agent", USER_AGENT)
+                        .build();
 
-                InputStreamReader reader = new InputStreamReader(connection.getInputStream());
-
-                JsonElement element = new JsonParser().parse(reader);
-                if (!element.isJsonObject()) {
-                    return new UpdateResult(UpdateReason.INVALID_JSON);
+                // Send request and get response
+                HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+                if (response.statusCode() != 200) {
+                    plugin.getLogger().warning("Failed to fetch update info. HTTP Status: " + response.statusCode());
+                    return new UpdateResult(UpdateReason.COULD_NOT_CONNECT, null, null, null);
                 }
 
-                reader.close();
-
-                JsonObject versionObject = element.getAsJsonObject().getAsJsonObject("latest");
-                JsonObject versionsObject = element.getAsJsonObject().getAsJsonObject("versions");
-
-                if (!versionsObject.has(versionObject.get("spigotversion").getAsString())) {
-                    return new UpdateResult(UpdateReason.INVALID_JSON);
-                }
-
-                JsonObject updateObject = versionsObject.getAsJsonObject(versionObject.get("spigotversion").getAsString());
-
-                Version current = Version.valueOf(plugin.getDescription().getVersion());
-                Version newest = Version.valueOf(versionObject.get("spigotversion").getAsString());
-
-                String updateUrl = updateObject.getAsJsonObject("spigot")
-                        .get("downloadUrl").getAsString();
-
-                List<String> changelog = IntStream
-                        .range(0, updateObject.getAsJsonArray("changelog").size())
-                        .mapToObj(i ->  updateObject.getAsJsonArray("changelog").get(i).getAsString())
-                        .collect(Collectors.toList());
-
-                return newest.greaterThan(current) ? new UpdateResult(UpdateReason.NEW_UPDATE, newest.toString(), updateUrl, changelog) :
-                        new UpdateResult(UpdateReason.UP_TO_DATE);
-            } catch (IOException e) {
-                e.printStackTrace();
-                return new UpdateResult(UpdateReason.COULD_NOT_CONNECT);
+                // Parse the response body
+                return parseResponse(response.body());
+            } catch (IOException | InterruptedException e) {
+                plugin.getLogger().severe("Failed to check for updates: " + e.getMessage());
+                return new UpdateResult(UpdateReason.COULD_NOT_CONNECT, null, null, null);
             } catch (JsonSyntaxException e) {
-                return new UpdateResult(UpdateReason.INVALID_JSON);
+                plugin.getLogger().warning("Invalid JSON received from update server.");
+                return new UpdateResult(UpdateReason.INVALID_JSON, null, null, null);
             }
         });
     }
 
+    /**
+     * Parses the JSON response to determine update results.
+     */
+    private UpdateResult parseResponse(String responseBody) {
+        JsonElement rootElement = JsonParser.parseString(responseBody);
+        if (!rootElement.isJsonObject()) {
+            return new UpdateResult(UpdateReason.INVALID_JSON, null, null, null);
+        }
+
+        JsonObject root = rootElement.getAsJsonObject();
+        JsonObject latest = root.getAsJsonObject("latest");
+        JsonObject versions = root.getAsJsonObject("versions");
+
+        String spigotVersion = latest.get("spigotversion").getAsString();
+        String currentVersion = plugin.getDescription().getVersion();
+
+        if (!versions.has(spigotVersion)) {
+            return new UpdateResult(UpdateReason.INVALID_JSON, null, null, null);
+        }
+
+        JsonObject updateData = versions.getAsJsonObject(spigotVersion);
+
+        boolean isUpdateAvailable = versionGreaterThan(spigotVersion, currentVersion);
+        if (isUpdateAvailable) {
+            String downloadUrl = updateData.get("downloadUrl").getAsString();
+            List<String> changelog = IntStream.range(0, updateData.getAsJsonArray("changelog").size())
+                    .mapToObj(i -> updateData.getAsJsonArray("changelog").get(i).getAsString())
+                    .toList();
+
+            return new UpdateResult(UpdateReason.NEW_UPDATE, spigotVersion, downloadUrl, changelog);
+        }
+
+        return new UpdateResult(UpdateReason.UP_TO_DATE, currentVersion, null, null);
+    }
+
+    /**
+     * Compares two version strings and determines if the first version is greater than the second.
+     * The versions are expected to be in a semantic versioning format.
+     *
+     * @param newVersion the new version string to compare, must not be null
+     * @param currentVersion the current version string to compare against, must not be null
+     * @return true if the new version is greater than the current version; false if not, or if an exception occurs
+     */
+    private boolean versionGreaterThan(@NotNull String newVersion, @NotNull String currentVersion) {
+        try {
+            var newVer = com.github.zafarkhaja.semver.Version.valueOf(newVersion);
+            var currentVer = com.github.zafarkhaja.semver.Version.valueOf(currentVersion);
+
+            return newVer.greaterThan(currentVer);
+        } catch (IllegalArgumentException e) {
+            plugin.getLogger().warning("Invalid version string provided: " + e.getMessage());
+        }
+        return false;
+    }
+
+    /**
+     * Returns the result of the last update check performed by the UpdateChecker.
+     *
+     * @return the {@link UpdateResult} object containing information about the update
+     *         check, such as the update reason, newest version, download URL, and changelog.
+     */
     public UpdateResult getLastResult() {
         return lastResult;
     }
 
+    // Enum for update reason explanations
     public enum UpdateReason {
-        NEW_UPDATE, UP_TO_DATE, COULD_NOT_CONNECT, INVALID_JSON;
+        NEW_UPDATE, UP_TO_DATE, COULD_NOT_CONNECT, INVALID_JSON
     }
 
-    public final class UpdateResult {
-        private final UpdateReason reason;
-        private final String newestVersion, url;
-        private List<String> changelog;
-
-        {
-            UpdateChecker.this.lastResult = this;
-        }
-
-        private UpdateResult(UpdateReason reason, String newestVersion, String url, List<String> changelog) {
-            this.reason = reason;
-            this.newestVersion = newestVersion;
-            this.url = url;
-            this.changelog = changelog;
-        }
-
-        private UpdateResult(UpdateReason reason) {
-            if (reason == UpdateReason.NEW_UPDATE) {
-                throw new IllegalArgumentException("Reasons that require updates must also provide the latest version, URL and changelog");
-            }
-
-            this.reason = reason;
-            this.newestVersion = plugin.getDescription().getVersion();
-            this.url = null;
-            this.changelog = null;
-        }
+    /**
+     * Record to represent the result of an update check.
+     */
+    public record UpdateResult(UpdateReason reason, String newestVersion,
+                               String downloadUrl, List<String> changelog) {
 
         public boolean updateAvailable() {
-            return this.reason == UpdateReason.NEW_UPDATE;
-        }
-
-        public String getNewestVersion() {
-            return newestVersion;
-        }
-
-        public String getUrl() {
-            return url;
-        }
-
-        public List<String> getChangelog() {
-            return changelog;
+            return reason == UpdateChecker.UpdateReason.NEW_UPDATE;
         }
 
         @Override
@@ -143,9 +181,17 @@ public class UpdateChecker {
             return "UpdateResult{" +
                     "reason=" + reason +
                     ", newestVersion='" + newestVersion + '\'' +
-                    ", url='" + url + '\'' +
+                    ", downloadUrl='" + downloadUrl + '\'' +
                     ", changelog=" + changelog +
                     '}';
+        }
+
+        public String getNewestVersion() {
+            return newestVersion;
+        }
+
+        public String getUrl() {
+            return downloadUrl;
         }
     }
 }
